minor fixes to delays

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div id="main">
-    <div id="box1"></div>
+    <div id="box1">
+      <div id="box4">
+      </div>
+    </div>
 
     <div id="box2">
       <div id="text">
